--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
 
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.30"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -63,7 +65,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //Corutinas
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2-native-mt"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2-native-mt"
+
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -77,6 +81,4 @@ dependencies {
 //    implementation 'androidx.room:room-ktx:2.3.0'
 //    implementation "androidx.room:room-runtime:2.3.0"
     //kapt "androidx.room:room-compiler:2.2.5"
-
-    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
