--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -80,10 +83,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
 
-    //implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-
-    //Room
-//    implementation 'androidx.room:room-ktx:2.3.0'
-//    implementation "androidx.room:room-runtime:2.3.0"
-    //kapt "androidx.room:room-compiler:2.2.5"
+// Dagger & Hilt
+    implementation("com.google.dagger:hilt-android:2.40")
+    kapt("com.google.dagger:hilt-android-compiler:2.40")
+    implementation("androidx.hilt:hilt-common:1.0.0")
+    kapt("androidx.hilt:hilt-compiler:1.0.0")
+    implementation("androidx.hilt:hilt-navigation-fragment:1.0.0")
+    implementation("androidx.hilt:hilt-work:1.0.0")
 }
